# config-validator

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  commit-msg-10.txt  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md
src/config_validator/application/: config_builder.py  config_source.py  error_formatter.py  errors.py  loader.py  validator.py
src/config_validator/cli/: main.py
src/config_validator/domain/: cross_validator.py  field.py  schema.py  secret.py
src/config_validator/infrastructure/: dotenv_source.py  env_var_source.py
tests/integration/application/: test_error_formatter.py  test_loader_with_default_sources.py
tests/integration/cli/: test_check_command.py  test_docs_command.py
tests/unit/application/: test_config_builder.py  test_config_source.py  test_loader.py  test_validator.py
tests/unit/cli/: test_import_schema.py
tests/unit/domain/: test_cross_validator.py  test_field.py  test_schema.py  test_secret.py
tests/unit/infrastructure/: test_dotenv_source.py  test_env_var_source.py
